# cookiecutter-pytask-project

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.rst  LICENSE  README.md  README.rst  codecov.yml  cookiecutter.json  environment.yml  justfile  pyproject.toml  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
.github/workflows/: main.yml
docs/: docs_environment.yml  rtd_environment.yml
docs/source/: api.md  changes.md  changes.rst  conf.py  faq.md  index.md  index.rst
hooks/: post_gen_hooks.py  post_gen_project.py  pre_gen_hooks.py  pre_gen_project.py
tests/: __init__.py  test_cookie.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION  MANIFEST.in  README.md  README.rst  environment.yml  justfile  pyproject.toml  pytask.ini  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/.github/: dependabot.yml  pull_request_template.md
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
{{cookiecutter.project_slug}}/.github/workflows/: main.yml
{{cookiecutter.project_slug}}/docs/: docs_environment.yml  rtd_environment.yml
{{cookiecutter.project_slug}}/docs/source/: api.md  api.rst  changes.md  conf.py  index.md  index.rst
{{cookiecutter.project_slug}}/src/: config.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  config.py
{{cookiecutter.project_slug}}/tests/: __init__.py  test_import.py
