[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "version.py"


[project]
name = "cookiecutter_pytask_project"
description = "A minimal cookiecutter template for a project with pytask."
classifiers = [ "Development Status :: 3 - Alpha", "Environment :: Console", "Intended Audience :: Science/Research", "License :: OSI Approved :: MIT License", "Operating System :: MacOS :: MacOS X", "Operating System :: Microsoft :: Windows", "Operating System :: POSIX", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only", "Topic :: Scientific/Engineering", "Topic :: Software Development :: Build Tools",]
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = ["cookiecutter"]

[[project.authors]]
name = "Tobias Raabe"
email = "raabe@posteo.de"

[project.optional-dependencies]
tests = ["pytest", "pytest-cookies", "pytest-cov"]
docs = [
  "furo",
  "ipython",
  "myst-parser",
  "nbsphinx",
  "sphinx",
  "sphinx-click",
  "sphinx-copybutton",
  "sphinx-design>=0.3",
  "sphinx-toolbox",
  "sphinxext-opengraph",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://cookiecutter-pytask-project.readthedocs.io/en/latest"
Changelog = "https://cookiecutter-pytask-project.readthedocs.io/en/latest/changes.html"
Documentation = "https://cookiecutter-pytask-project.readthedocs.io/en/latest"
Github = "https://github.com/pytask-dev/cookiecutter-pytask-project"
Tracker = "https://github.com/pytask-dev/cookiecutter-pytask-project/issues"

[tool.setuptools]
platforms = [ "unix", "linux", "osx", "cygwin", "win32",]
license-files = [ "LICENSE"]
include-package-data = false


[tool.mypy]
files = ["hooks", "tests"]
exclude = "{{cookiecutter.project_slug}}"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true


[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true


[tool.ruff]
target-version = "py38"
select = ["ALL"]
fix = true
extend-ignore = [
    # Numpy docstyle
    "D107",
    "D203",
    "D212",
    "D213",
    "D402",
    "D413",
    "D415",
    "D416",
    "D417",
    # Others.
    "I",  # ignore isort
    "COM812",  # Comply with ruff-format.
    "ISC001",  # Comply with ruff-format.
]


[tool.ruff.per-file-ignores]
"hooks/*" = ["INP001"]
"tests/*" = ["D", "ANN", "S101", "S603"]
"hooks/post_gen_project.py" = ["PLR0133", "S603"]


[tool.ruff.pydocstyle]
convention = "numpy"


[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
testpaths = ["tests"]
filterwarnings = [
    "ignore: the imp module is deprecated in favour of importlib",
    "ignore: Using or importing the ABCs from 'collections' instead of from",
    "ignore: The (parser|symbol) module is deprecated and will be removed in future",
]
markers = [
    "wip: Tests that are work-in-progress.",
    "unit: Flag for unit tests which target mainly a single function.",
    "integration: Flag for integration tests which may comprise of multiple unit tests.",
    "end_to_end: Flag for tests that cover the whole program.",
]
norecursedirs = [".idea", ".tox"]
