[project]
name = "cookiecutter_pytask_project"
version = "1.7.0"
description = "A minimal cookiecutter template for a project with pytask."
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.9"
dependencies = ["cookiecutter"]

[[project.authors]]
name = "Tobias Raabe"
email = "raabe@posteo.de"

[tool.uv]
dev-dependencies = ["tox-uv>=1.7.0"]

[project.optional-dependencies]
docs = [
    "furo",
    "ipython",
    "myst-parser",
    "nbsphinx",
    "sphinx",
    "sphinx-click",
    "sphinx-copybutton",
    "sphinx-design>=0.3",
    "sphinx-toolbox",
    "sphinxext-opengraph",
]
test = ["pytest", "pytest-cookies", "pytest-cov"]
typing = ["ty>=0.0.7"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://cookiecutter-pytask-project.readthedocs.io/en/latest"
Changelog = "https://cookiecutter-pytask-project.readthedocs.io/en/latest/changes.html"
Documentation = "https://cookiecutter-pytask-project.readthedocs.io/en/latest"
Github = "https://github.com/pytask-dev/cookiecutter-pytask-project"
Tracker = "https://github.com/pytask-dev/cookiecutter-pytask-project/issues"

[tool.ty.rules]
unused-ignore-comment = "error"

[tool.ty.terminal]
error-on-warning = true

[tool.ruff]
target-version = "py39"
fix = true
unsafe-fixes = true

[tool.ruff.lint]
extend-ignore = [
    "COM812", # Comply with ruff-format.
    "ISC001", # Comply with ruff-format.
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"hooks/*" = ["INP001"]
"tests/*" = ["D", "ANN", "S101", "S603"]
"hooks/post_gen_project.py" = ["PLR0133", "S603"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
testpaths = ["tests"]
filterwarnings = [
    "ignore: the imp module is deprecated in favour of importlib",
    "ignore: Using or importing the ABCs from 'collections' instead of from",
    "ignore: The (parser|symbol) module is deprecated and will be removed in future",
]
markers = [
    "wip: Tests that are work-in-progress.",
    "unit: Flag for unit tests which target mainly a single function.",
    "integration: Flag for integration tests which may comprise of multiple unit tests.",
    "end_to_end: Flag for tests that cover the whole program.",
]
norecursedirs = [".idea", ".tox"]
