[metadata]
name = cookiecutter_pytask
description = A minimal template for projects with pytask.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://cookiecutter-pytask.readthedocs.io/en/latest
author = Tobias Raabe
author_email = raabe@posteo.de
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
project_urls =
    Changelog = https://cookiecutter-pytask.readthedocs.io/en/latest/changes.html
    Documentation = https://cookiecutter-pytask.readthedocs.io/en/latest
    Github = https://github.com/pytask-dev/cookiecutter-pytask
    Tracker = https://github.com/pytask-dev/cookiecutter-pytask/issues

[options]
python_requires = >=3.6
zip_safe = False

[check-manifest]
ignore =
    version.py
