[metadata]
name = cookiecutter_pytask_project
description = A minimal cookiecutter template for a project with pytask.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://cookiecutter-pytask-project.readthedocs.io/en/latest
author = Tobias Raabe
author_email = raabe@posteo.de
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Build Tools
project_urls =
    Changelog = https://cookiecutter-pytask-project.readthedocs.io/en/latest/changes.html
    Documentation = https://cookiecutter-pytask-project.readthedocs.io/en/latest
    Github = https://github.com/pytask-dev/cookiecutter-pytask-project
    Tracker = https://github.com/pytask-dev/cookiecutter-pytask-project/issues

[options]
python_requires = >=3.8

[check-manifest]
ignore =
    version.py
