[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
requires-python = ">=3.8"
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: {{ cookiecutter.open_source_license }} License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["pytask"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "{{ cookiecutter.open_source_license }}"

[[project.authors]]
name = "{{ cookiecutter.author }}"
email = "{{ cookiecutter.email }}"

[project.optional-dependencies]
docs = [
  "furo",
  "ipython",
  "myst-parser",
  "nbsphinx",
  "sphinx",
  "sphinx-copybutton",
  "sphinx-design>=0.3",
  "sphinx-toolbox",
  "sphinxext-opengraph",
]
test = ["pytest", "pytest-cov", "pytest-xdist"]

[project.urls]
Changelog = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
Documentation = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
Github = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
Tracker = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues"

{% if cookiecutter.add_mypy == "yes" %}[tool.mypy]
files = ["src", "tests"]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_errors = true
module = "tests.*"
disallow_untyped_defs = false
{% endif %}
[tool.pytask.ini_options]
paths = ["src/{{ cookiecutter.project_slug }}"]

[tool.ruff]
target-version = "py{{ cookiecutter.python_version | replace('.', '') }}"
fix = true
unsafe-fixes = true

[tool.ruff.lint]
extend-ignore = [
  "COM812", # Comply with ruff-format.
  "ISC001", # Comply with ruff-format.
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN", "S101"]
"docs/source/conf.py" = ["INP001"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
testpaths = ["src", "tests"]
norecursedirs = [".idea", ".tox"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
pytask = ">=0.4.7,<0.5"

[tool.pixi.pypi-dependencies]
reproducible_research_template = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.feature.test.tasks]
test = "pytest --cov src --cov tests"

[tool.pixi.feature.docs.tasks]
docs = "sphinx-build -b html docs/source docs/build"
