[metadata]
name = {{ cookiecutter.project_slug }}
description = A project with pytask.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = hhttps://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.email }}
license = {{ cookiecutter.license }}
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: {{ cookiecutter.license }} License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Changelog = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
    Documentation = hhttps://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
    Github = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
    Tracker = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.6.1
include_package_data = True
zip_safe = False

[check-manifest]
ignore =
    src/_version.py
